REGRESSION(r105057): Dynamically changing <tspan> offsets is broken https://bugs.webkit.org/show_bug.cgi?id=78385 <rdar://problem/10832932>

Reviewed by Simon Fraser.

Don't short-circuit buildLayoutAttributesIfNeeded if m_textPositions is already full;
we can't skip rebuilding the layout attributes, just walking the tree to acquire the
positioning lists (invalidation of positioning lists is already covered by textDOMChanged).

Test: svg/text/tspan-dynamic-positioning.svg

* rendering/svg/SVGTextLayoutAttributesBuilder.cpp:
(WebCore::SVGTextLayoutAttributesBuilder::buildLayoutAttributesIfNeeded):

Add a test ensuring that changing the offset of a <tspan> post-load results in correct layout.

* platform/chromium/test_expectations.txt:
* platform/mac/svg/text/tspan-dynamic-positioning-expected.png: Added.
* platform/mac/svg/text/tspan-dynamic-positioning-expected.txt: Added.
* svg/text/tspan-dynamic-positioning.svg: Added.



Canonical link: https://commits.webkit.org/95700@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107862 268f45cc-cd09-0410-ab3c-d52691b4dbfc